--- a/docs/AI Cybersecurity Engineer.mdx
+++ b/docs/AI Cybersecurity Engineer.mdx
@@ -28,51 +28,70 @@ import Newsletter from "@site/src/components/Newsletter";
 
 ## The Problem Nobody Is Solving
 
-AI systems now make autonomous decisions in production environments. They approve loans, diagnose diseases, control infrastructure, and interact with millions of users every day. When these systems fail, the consequences are not theoretical — they are financial, legal, and reputational.
+AI systems now make autonomous decisions in production environments. They approve loans, diagnose diseases, control infrastructure, and interact with millions of users every day.
+
+When these systems fail, the consequences are not theoretical. They are financial, legal, and reputational.
 
 Yet many AI engineers graduate without understanding:
-- How adversaries manipulate model predictions
-- Why prompt injection defeats LLM guardrails
-- How robustness can be verified mathematically
-- When federated learning actually preserves privacy
-- Which attacks scale with model capability
+
+- How adversaries manipulate model predictions  
+- Why prompt injection defeats LLM guardrails  
+- How robustness can be validated rigorously  
+- When federated learning actually preserves privacy  
+- Which attacks scale with model capability  
 
 **This is not a gap. It is a crisis.**
 
-Traditional cybersecurity training does not cover AI attack surfaces. AI and machine learning courses ignore adversarial threat models. The result is production systems deployed by engineers who have never seen an adversarial example, never tested a jailbreak, and never quantified model risk.
+Traditional cybersecurity training ignores AI-specific attack surfaces.  
+AI and machine learning programs avoid adversarial threat models.
 
-**We built this program to fix that.**
+The result is production AI systems deployed by engineers who have never broken a model, never defended one under pressure, and never quantified AI risk.
+
+**This program exists to fix that.**
 
 ---
 
 ## What This Program Actually Is
 
 This is not a certificate farm.  
-This is not “ten hours to AI security mastery.”  
-This is not theory without implementation.
+This is not a short crash course.  
+This is not theory without consequence.
 
 **This is a systems-level apprenticeship.**
 
-You will build production-grade security tools from scratch. You will break state-of-the-art models. You will design defenses that hold under real attacks. You will quantify risk in terms executives understand.
+Participants build production-grade security systems, attack real models, deploy defenses under pressure, and explain failures in language executives understand.
 
-**Format:** Modular curriculum with cohort-based learning and self-paced options  
-**Duration:** Eighteen to twenty-four months for the complete ladder  
-**Philosophy:** Build → Break → Defend → Govern  
-**Validation:** Project-based certification with oral defense
+### Program Format
+- Modular curriculum  
+- Cohort-based and self-paced tracks  
 
-If you are looking for shortcuts, this program is not for you.
+### Duration
+- Eighteen to twenty-four months for the full certification ladder  
+
+### Methodology
+- Build  
+- Break  
+- Defend  
+- Govern  
+
+### Validation Model
+- Enterprise projects  
+- Mandatory lab exams  
+- Oral defense  
+
+If you want shortcuts, this program is not for you.
 
 ---
 
 ## Program Architecture
 
-### The Certification Ladder
+### Certification Ladder
 
-Each level produces **one enterprise-grade project** and maps directly to real industry roles.
+Each level maps directly to real industry roles and produces **one enterprise-grade system**.
 
 - **C-AISSA** — Certified AI Systems Security Associate  
-- **C-AMLE** — Certified Adversarial ML Engineer  
-- **C-LASS** — Certified LLM and Agent Security Specialist  
+- **C-AMLE** — Certified Adversarial Machine Learning Engineer  
+- **C-LASS** — Certified LLM and Autonomous Agent Security Specialist  
 - **C-AICDE** — Certified AI Cyber Defense Engineer  
 - **C-AIRTO** — Certified AI Red Team Operator  
 - **C-AIRGP** — Certified AI Risk and Governance Professional  
@@ -83,171 +102,270 @@ You may stop at any level or complete the full ladder.
 
 ---
 
-## Detailed Curriculum (Project-Oriented)
+## Detailed Curriculum and Exams
 
-### Module 0 — AI Systems Security Foundations  
+---
+
+## Module 0 — AI Systems Security Foundations
 
 **Certification:** C-AISSA  
+**Timeline:** Two to four weeks  
 
-**Timeline:** Two to four weeks
+### Enterprise Project  
+**Secure AI System Threat Model**
 
-**Enterprise Project:** Secure AI System Threat Model
+Deliverables:
+- Threat model  
+- AI attack surface map  
+- Risk register  
+- Remediation roadmap  
 
-Students deliver a full security baseline for a production AI system, including:
-- Threat model
-- Attack surface map
-- Risk register
-- Remediation roadmap
+### Learning Outcome  
+“I can explain how an AI system fails before it is attacked.”
 
-**Outcome:**  
-> “I can explain how an AI system fails before it is attacked.”
+### Mandatory Lab Exam  
+**Real-World AI Threat Modeling**
+
+- **Duration:** Four hours  
+- **Environment:** Live AI-powered e-commerce recommendation system  
+
+**Candidate Tasks**
+1. Map the complete AI and system attack surface  
+2. Identify at least five critical vulnerabilities  
+3. Demonstrate two working proof-of-concept exploits  
+4. Apply and verify remediations  
+5. Deliver a five-minute executive risk briefing  
+
+**Pass Condition:** Predictive and defensible AI failure analysis
 
 ---
 
-### Module 1 — Adversarial Machine Learning  
+## Module 1 — Adversarial Machine Learning
 
 **Certification:** C-AMLE  
+**Timeline:** Eight to ten weeks  
 
-**Timeline:** Eight to ten weeks
+### Enterprise Project  
+**Adversarial Robustness Evaluation Platform**
 
-**Enterprise Project:** Adversarial Robustness Evaluation Platform
+- Implement adversarial attacks  
+- Evaluate transferability  
+- Produce executive-ready robustness metrics  
 
-Students implement multiple adversarial attacks, evaluate transferability, and build a robustness dashboard with executive risk summaries.
+### Learning Outcome  
+“I can measure and communicate model robustness under adversarial pressure.”
 
-**Outcome:**  
-> “I can measure and communicate model robustness under adversarial pressure.”
+### Mandatory Lab Exam  
+**Black-Box Adversarial Tournament**
+
+- **Duration:** Forty-eight hours  
+- **Environment:** Isolated Kubernetes cluster  
+
+**Candidate Tasks**
+1. Break three unknown production-grade models  
+2. Achieve high attack success on at least one model  
+3. Defend against peer adversarial attacks  
+4. Submit a quantitative robustness report  
+
+**Pass Condition:** High-performing, reproducible attack methodology
 
 ---
 
-### Module 2 — LLM and Autonomous Agent Security  
+## Module 2 — LLM and Autonomous Agent Security
 
 **Certification:** C-LASS  
+**Timeline:** Eight to ten weeks  
 
-**Timeline:** Eight to ten weeks
+### Enterprise Project  
+**LLM and Agent Security Gateway**
 
-**Enterprise Project:** LLM and Agent Security Gateway
+Capabilities:
+- Prompt injection detection  
+- Jailbreak prevention  
+- Tool-use authorization  
+- Runtime containment  
+- Kill-switch enforcement  
 
-Students build a security layer for LLMs and autonomous agents, including:
-- Prompt injection detection
-- Jailbreak prevention
-- Tool-use authorization
-- Runtime containment
-- Kill-switch enforcement
+### Learning Outcome  
+“I can secure LLMs and autonomous agents operating in production.”
 
-**Performance targets:**
-- Sub one-hundred millisecond response latency
-- False positive rate below five percent
+### Mandatory Lab Exam  
+**Jailbreak and Containment Marathon**
 
-**Outcome:**  
-> “I can secure LLMs and autonomous agents operating in production.”
+- **Duration:** Six hours  
+- **Environment:** Financial LLM agent with tool execution privileges  
+
+**Candidate Tasks**
+1. Perform five distinct jailbreak techniques  
+2. Implement containment that blocks all attacks  
+3. Deploy real-time detection with very low latency  
+4. Trigger an active kill-switch during a live attack  
+
+**Pass Condition:** Sustained control under continuous attack
 
 ---
 
-### Module 3 — AI-Powered Cyber Defense  
+## Module 3 — AI-Powered Cyber Defense
 
 **Certification:** C-AICDE  
+**Timeline:** Ten to twelve weeks  
 
-**Timeline:** Ten to twelve weeks
+### Enterprise Project  
+**AI Threat Detection System**
 
-**Enterprise Project:** AI Threat Detection System
+- Malware detection  
+- Network intrusion detection  
+- Behavioral anomaly detection  
 
-Students build a real-time, machine-learning-driven defense system such as:
-- Malware detection
-- Network intrusion detection
-- Behavioral anomaly detection
+### Learning Outcome  
+“I can deploy AI systems that defend real environments at scale.”
 
-**Performance targets:**
-- Detection accuracy above ninety-five percent
-- Sub-millisecond inference latency on high-throughput network traffic
+### Mandatory Lab Exam  
+**Continuous Live Defense**
 
-**Outcome:**  
-> “I can deploy AI systems that defend real environments at scale.”
+- **Duration:** Twenty-four hours  
+- **Environment:** Production-style network under active attack  
+
+**Candidate Tasks**
+1. Deploy an AI-based intrusion detection system  
+2. Detect and mitigate more than one hundred attack variants  
+3. Maintain high service availability  
+4. Produce a complete forensic timeline  
+
+**Pass Condition:** Stable defense under sustained pressure
 
 ---
 
-### Module 4 — Offensive AI and Red Teaming  
+## Module 4 — Offensive AI and Red Teaming
 
 **Certification:** C-AIRTO  
+**Timeline:** Ten to twelve weeks  
 
-**Timeline:** Ten to twelve weeks
+### Enterprise Project  
+**AI Red Team Automation Platform**
 
-**Enterprise Project:** AI Red Team Automation Platform
+- Model extraction  
+- Data poisoning  
+- Backdoor implantation  
+- Prompt-based attack campaigns  
 
-Students simulate real adversaries targeting AI systems through:
-- Model extraction
-- Data poisoning
-- Backdoor attacks
-- Prompt injection campaigns
+### Learning Outcome  
+“I can simulate realistic attackers targeting AI systems.”
 
-**Outcome:**  
-> “I can simulate realistic attackers against AI systems.”
+### Mandatory Lab Exam  
+**Full AI Red Team Engagement**
+
+- **Duration:** Seventy-two hours  
+- **Environment:** Simulated financial enterprise with multiple AI systems  
+
+**Candidate Tasks**
+1. Gain access via an AI vulnerability  
+2. Extract sensitive training data  
+3. Poison a model without detection  
+4. Implant a persistent backdoor  
+5. Deliver a professional red team report  
+
+**Pass Condition:** Realistic adversarial execution and discipline
 
 ---
 
-### Module 5 — AI Governance, Risk, and Compliance  
+## Module 5 — AI Governance, Risk, and Compliance
 
 **Certification:** C-AIRGP  
+**Timeline:** Six to eight weeks  
 
-**Timeline:** Six to eight weeks
+### Enterprise Project  
+**AI Governance and Risk Engine**
 
-**Enterprise Project:** AI Governance and Risk Engine
+- Model lineage tracking  
+- Bias and fairness auditing  
+- Regulatory mapping  
+- Audit evidence generation  
 
-Students build a governance platform featuring:
-- Model lineage tracking
-- Risk scoring
-- Bias auditing
-- Regulatory mapping
-- Audit evidence generation
+### Learning Outcome  
+“I can translate AI security into regulatory and business language.”
 
-**Outcome:**  
-> “I can translate AI security into regulatory and business language.”
+### Mandatory Lab Exam  
+**Regulatory Audit Simulation**
+
+- **Duration:** Eight hours  
+- **Environment:** Healthcare AI system under audit  
+
+**Candidate Tasks**
+1. Conduct bias and fairness audits  
+2. Generate regulatory mappings  
+3. Produce audit evidence trails  
+4. Present findings to simulated regulators  
+5. Verify remediation effectiveness  
+
+**Pass Condition:** Accurate governance and compliance execution
 
 ---
 
-### Module 6 — AI Security Architecture  
+## Module 6 — AI Security Architecture
 
 **Certification:** C-AISA  
+**Timeline:** Six to eight weeks  
 
-**Timeline:** Six to eight weeks
+### Enterprise Projects
+- AI Threat Economics Simulator  
+- Formal Robustness Certification Tool  
 
-**Enterprise Projects:**
-- AI Threat Economics Simulator
-- Formal Robustness Certification Tool
+### Learning Outcome  
+“I can design secure AI systems from first principles.”
 
-Students quantify risk in monetary terms and produce mathematically justified robustness guarantees.
+### Mandatory Lab Exam  
+**Secure Architecture Defense**
 
-**Outcome:**  
-> “I can design secure AI systems from first principles.”
+- **Duration:** One week  
+- **Environment:** Autonomous vehicle AI platform  
+
+**Candidate Tasks**
+1. Model more than fifty attack vectors  
+2. Design a zero-trust AI architecture  
+3. Implement cryptographic verification  
+4. Produce formal security guarantees  
+5. Defend architecture decisions before a review board  
+
+**Pass Condition:** Architect-level reasoning and justification
 
 ---
 
-### Module 7 — Principal Capstone  
+## Module 7 — Principal Capstone
 
 **Certification:** C-PAISE  
+**Timeline:** Four to six months  
 
-**Timeline:** Four to six months
+### Capstone Options
+- Zero-trust AI security platform  
+- Enterprise AI red team suite  
+- Publishable industry benchmark  
 
-**Capstone Options:**
-- Zero-Trust AI Security Platform
-- Comprehensive AI Red Team Suite
-- Publishable Industry Benchmark
+### Learning Outcome  
+“I operate at principal or founder level in AI security.”
 
-**Mandatory requirements:**
-- Production-grade system
-- Live demonstration
-- Complete threat model
-- Executive briefing
-- Oral defense
+### Mandatory Lab Exam  
+**Principal System Ordeal**
 
-**Outcome:**  
-> “I operate at principal or founder level in AI security.”
+- **Duration:** Two weeks  
+- **Environment:** Multi-AI production platform  
+
+**System Requirements**
+1. Protect three or more AI systems  
+2. Survive a seven-day red team assault  
+3. Maintain extremely high availability  
+4. Scale to very high request throughput  
+5. Maintain minimal security overhead  
+
+**Pass Condition:** Principal-level operational authority and judgment
 
 ---
 
 ## Certification Validation Model
 
 Every certification requires:
-1. Enterprise project delivery  
+
+1. Enterprise system delivery  
 2. Live attack and defense demonstration  
 3. Written threat model  
 4. Failure analysis  
@@ -257,214 +375,18 @@ No multiple-choice exams. No shortcuts.
 
 ---
 
-# 🧪 Hands-On Lab Exam Additions for All Certification Levels
-
-Here are the **practical, hands-on lab exam requirements** to add to each certification level in your AI Security Engineer Bootcamp:
-
----
-
-## **Module 0 — C-AISSA (AI Systems Security Associate)**
-### **Lab Exam: Real-World Threat Modeling Challenge**
-- **Duration:** 4 hours
-- **Scenario:** Given a live e-commerce recommendation API
-- **Tasks:**
-  1. Map the complete AI attack surface
-  2. Identify 5+ critical vulnerabilities
-  3. Build a working proof-of-concept exploit for 2 vulnerabilities
-  4. Document remediation with actual code fixes
-- **Deliverables:**
-  - Live exploit demonstration
-  - Patched code repository
-  - Executive risk briefing (5-minute video)
-
----
-
-## **Module 1 — C-AMLE (Adversarial ML Engineer)**
-### **Lab Exam: Black-Box Attack Tournament**
-- **Duration:** 48-hour capture-the-flag
-- **Scenario:** Attack 3 production-grade models without internal knowledge
-- **Tasks:**
-  1. Generate adversarial examples that fool all models
-  2. Achieve >90% attack success rate
-  3. Defend against other participants' attacks
-  4. Write a robustness report with quantifiable metrics
-- **Environment:** Isolated Kubernetes cluster with monitoring
-- **Passing:** Top 30% of tournament participants
-
----
-
-## **Module 2 — C-LASS (LLM & Agent Security Specialist)**
-### **Lab Exam: Jailbreak & Containment Marathon**
-- **Duration:** 6 hours
-- **Scenario:** Secured LLM agent with financial tool access
-- **Tasks:**
-  1. Break out of sandbox using 5 different jailbreak techniques
-  2. Implement containment that survives all jailbreak attempts
-  3. Build real-time detection system (<100ms latency)
-  4. Demonstrate kill-switch that works mid-attack
-- **Metrics:**
-  - Zero successful jailbreaks in final 2 hours
-  - <5% false positive rate
-  - All attacks detected within 500ms
-
----
-
-## **Module 3 — C-AICDE (AI Cyber Defense Engineer)**
-### **Lab Exam: Live Attack Defense**
-- **Duration:** 24-hour continuous defense
-- **Scenario:** Production network with AI-powered attacks
-- **Tasks:**
-  1. Deploy ML-based IDS from scratch
-  2. Detect and mitigate 100+ attack variants
-  3. Maintain >99% service availability
-  4. Produce forensic timeline of attacks
-- **Real Attacks Included:**
-  - Adversarial malware
-  - Data poisoning
-  - Model inversion
-  - Membership inference
-
----
-
-## **Module 4 — C-AIRTO (AI Red Team Operator)**
-### **Lab Exam: Red Team Operation**
-- **Duration:** 72-hour simulated enterprise environment
-- **Scenario:** Financial institution with 5 AI systems
-- **Tasks:**
-  1. Gain initial access through AI system vulnerability
-  2. Extract sensitive training data
-  3. Poison model without detection
-  4. Plant backdoor for persistent access
-  5. Write professional engagement report
-- **Grading:**
-  - Stealth (detection avoidance)
-  - Impact (critical systems compromised)
-  - Documentation (court-admissible evidence)
-
----
-
-## **Module 5 — C-AIRGP (AI Risk & Governance Professional)**
-### **Lab Exam: Compliance & Audit Simulation**
-- **Duration:** 8 hours
-- **Scenario:** Healthcare AI system facing regulatory audit
-- **Tasks:**
-  1. Conduct complete bias audit with real patient data
-  2. Generate GDPR/CCPA/HIPAA compliance reports
-  3. Build automated audit trail system
-  4. Present findings to "regulators" (role-played)
-  5. Implement corrections and verify compliance
-- **Deliverables:**
-  - Compliance dashboard
-  - Legal risk assessment
-  - Remediation verification
-
----
-
-## **Module 6 — C-AISA (AI Security Architect)**
-### **Lab Exam: Secure System Design & Build**
-- **Duration:** 1 week
-- **Scenario:** Design autonomous vehicle security system
-- **Tasks:**
-  1. Create threat model with 50+ attack vectors
-  2. Design zero-trust architecture
-  3. Implement cryptographic verification layer
-  4. Build formal verification proofs for critical components
-  5. Perform cost-benefit analysis of security measures
-- **Final:** Present to "board" (defend architecture decisions)
-
----
-
-## **Module 7 — C-PAISE (Principal AI Security Engineer)**
-### **Lab Exam: Full-System Capstone**
-- **Duration:** 2 weeks
-- **Scenario:** Build and defend complete AI security platform
-- **Requirements:**
-  1. Platform must protect 3+ different AI systems
-  2. Survive 7-day continuous red team attack
-  3. Maintain >99.9% availability
-  4. Pass third-party penetration test
-  5. Scale to 1M requests/second
-  6. Cost <$0.0001 per inference for security overhead
-- **Final Defense:** 2-hour oral exam with industry experts
-
----
-
-## 🎯 Lab Exam Common Requirements
-
-### **For All Levels:**
-1. **Live Environment:** No simulations – real systems, real attacks
-2. **Time Pressure:** Realistic deadlines mirroring production incidents
-3. **Documentation:** Professional reports suitable for executives
-4. **Code Quality:** Production-ready, reviewed, and tested
-5. **Ethical Boundaries:** Clear rules of engagement, legal review
-
-### **Grading Rubric:**
-- **Technical Execution (40%)** – Did it work under pressure?
-- **Security Depth (30%)** – Understanding of root causes
-- **Communication (20%)** – Can explain to non-technical stakeholders
-- **Ethics (10%)** – Responsible disclosure and handling
-
-### **Failure Modes:**
-- **Critical:** Causing actual harm or data loss
-- **Major:** Missing major vulnerability class
-- **Minor:** Poor documentation or communication
-
----
-
-## 🛠️ Lab Infrastructure Requirements
-
-```yaml
-# For each student:
-isolation_level: full_vm_or_container
-resources:
-  cpu: 8 cores
-  ram: 32GB
-  gpu: 1x A100 (for ML levels)
-  storage: 500GB SSD
-network:
-  isolated: true
-  attack_simulation: enabled
-  monitoring: full_packet_capture
-backup: hourly_snapshots
-```
-
----
-
-## 📊 Certification Validity & Renewal
-
-- **Certification valid:** 2 years
-- **Renewal requires:** Passing current year's lab exam
-- **Failure:** Must retake full module
-- **Advanced standing:** Can challenge higher level labs directly
-
----
-
-## 🔒 Security & Anti-Cheating Measures
-
-1. **Live proctoring** with screen/camera monitoring
-2. **Unique exam environments** per candidate
-3. **Behavioral analysis** for cheating detection
-4. **Post-exam code review** for originality
-5. **Oral defense** to verify understanding
-
----
-
-**These hands-on lab exams ensure that every certified engineer has actually built, broken, and defended real AI systems — not just passed a written test.**
-
-
-
 ## The StFrancis Labs Thesis
 
 **Intelligence without control is a liability.**
 
-AI systems learn, adapt, and act. Security cannot be bolted on later. It must be designed from first principles.
+AI systems learn, adapt, and act. Security must be designed from first principles, not bolted on later.
 
-This program trains engineers who can:
-- Think adversarially
-- Design defensible systems
-- Quantify risk
-- Communicate with executives
-- Operate responsibly at scale
+This program produces engineers who:
+- Think adversarially  
+- Design defensible systems  
+- Quantify risk  
+- Communicate with executives  
+- Operate responsibly at scale  
 
 ---
 
@@ -472,7 +394,7 @@ This program trains engineers who can:
 
 This program is difficult by design.
 
-It exists for engineers willing to accept responsibility for securing systems that shape real outcomes in the world.
+It exists for engineers willing to accept responsibility for securing systems that shape real-world outcomes.
 
 **Security is the cost of intelligence.**
 
@@ -491,8 +413,8 @@ It exists for engineers willing to accept responsibility for securing systems th
 <GiscusComments />
 
 <Newsletter
-  title="StFrancis Labs Updates"
-  description="Weekly deep dives on adversarial machine learning, LLM security, and AI governance."
-  buttonText="Subscribe"
+  title="🚀 Enjoyed this post?"
+  description="Join our community and get weekly updates!"
+  buttonText="Join Now"
   theme="secondary"
 />
