--- a/blog/2026-01-31T05:13:01.703Z-cursor-ai-wins-them-all.mdx
+++ b/blog/2026-01-31T05:13:01.703Z-cursor-ai-wins-them-all.mdx
@@ -1,3 +1,4 @@
+---
 slug: cursor-ai-wins-them-all
 title: "Cursor AI: The Only Coding Assistant That Actually Gets It"
 authors: [francis]
@@ -74,7 +75,7 @@ Less fighting. More shipping. That's the Cursor promise.
 
 ---
 
-## Do you have another opinion?
+## Do you have another opinon?
 
 Loved this? Hated it? Still using Vim like it's 1999? Drop your thoughts below.
 
